@@ -1,5 +1,9 @@
 [b]Version 0.6.0rc3[/b] (not released yet):
 
+(2008-03-05)
+ * Ignore action restore/hide if system tray icon is not visible. Fixes
+   bug #1908229.
+
 (2008-03-03)
  * Now the shortcut editor should recognize some of the multimedia keys.
  * (By user request) Added an action to reset the video equalizer.
